# flask-boilerplate

./: .gitignore  Dockerfile  README.md  example.env  pyproject.toml  requirements.txt
project_api/: __init__.py
project_api/api/: __init__.py  auth.py  user.py
project_api/api/schema/: auth.py  response.py  user.py
project_api/config/: base.py  dev.py  prod.py  test.py
project_api/helper/: auth.py  config.py  encoder.py  error_handler.py  extension.py  response_factory.py
project_api/model/: user.py
project_api/service/: auth.py  user.py
